# MegBox

./: .gitignore  .pylintrc  LICENSE  README.md  codestyle-format.sh  codestyle_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: codestyle-check.yml  test.yml
megbox/: __init__.py  easy_use.py  esay_use.py  types.py
megbox/attention/: __init__.py  bam.py  cbam.py  criss_cross_attention.py  eca.py  external_attention.py  init.py  multi_head_self_attention.py  outlook_attention.py  psa.py  se_block.py  simam.py
megbox/block/: __init__.py  convnext_block.py  inceptionnext_block.py  layer_scale.py  mlp.py  segnext_block.py
megbox/block/arch/: __init__.py  mlp_arch.py  multi_path_conv.py  next_arch.py  split_concant_conv.py  transformer_arch.py
megbox/block/conv/: __init__.py  involution.py  rep_conv.py  volo.py
megbox/data/: __init__.py  constants.py  image_utils.py  transforms.py
megbox/functional/: __init__.py  distribution.py  elementwise.py  logic.py  safe.py  tensor.py
megbox/module/: __init__.py  activation.py  drop_path.py  flatten.py  init.py  layer_norm.py  pooling.py  spectral_norm.py
megbox/optimizer/: __init__.py  lr_scheduler.py  optimizer.py  params_helper.py
megbox/reparam/: __init__.py  rep_conv.py  utils.py  visualization.py
megbox/transformer/: __init__.py  layers.py  patch_embedding.py
megbox/utils/: __init__.py  msic.py  tensor_helper.py
tests/: test_attentions.py  test_block.py  test_lr_scheduler.py  test_optimizer.py  test_pooling.py  test_reparam.py  utils.py
(+6 files in other folders)
